--- a/resources/lang/nl/messages.po
+++ b/resources/lang/nl/messages.po
@@ -5,11 +5,11 @@ msgstr ""
 "PO-Revision-Date: \n"
 "Last-Translator: TheDutchJewel <thedutchjewel@gmail.com>\n"
 "Language-Team: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: nl\n"
-"X-Generator: Poedit 2.4.3\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #: MultTreeView.php:126
 msgid "MultTreeView"
@@ -54,3 +54,16 @@ msgstr "sluiten "
 #: resources/views/layouts/trees-duplicates.phtml:21
 msgid "count"
 msgstr "aantal"
+
+#: Toevoeging controlepaneel
+msgid "Options for stricter selection through additional clauses"
+msgstr "Opties voor strengere selectie door aanvullende clausules"
+
+msgid "only"
+msgstr "alleen"
+
+msgid "Match only in"
+msgstr "alleen overeenkomsten in"
+
+msgid "(omitted)"
+msgstr "(weggelaten)"
