--- a/resources/lang/nl/messages.po
+++ b/resources/lang/nl/messages.po
@@ -9,11 +9,15 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: Poedit 3.4.2\n"
 
 #: MultTreeView.php:126
 msgid "MultTreeView"
-msgstr "Weergave met meerdere bomen"
+msgstr "Multiboomweergave"
+
+#: MultTreeView.php:175
+msgid "A treeview-diagram, showing the ancestors and descendants of an individual."
+msgstr "Een boomdiagram dat de voorouders en nakomelingen van een persoon toont."
 
 #: app/Http/RequestHandlers/MultTreeViewRH.php:87
 msgid "Check tree of %s"
@@ -67,3 +71,7 @@ msgstr "alleen overeenkomsten in"
 
 msgid "(omitted)"
 msgstr "(weggelaten)"
+
+#: Ergänzung CCE-Anbindung
+msgid "Add this records to the clippings cart"
+msgstr "Voeg deze records toe aan de stamboomknipsels"
