--- a/resources/lang/nl/messages.po
+++ b/resources/lang/nl/messages.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.4.2\n"
+"X-Generator: Poedit 3.5\n"
 
 #: MultTreeView.php:126
 msgid "MultTreeView"
@@ -67,7 +67,7 @@ msgid "only"
 msgstr "alleen"
 
 msgid "Match only in"
-msgstr "alleen overeenkomsten in"
+msgstr "Overeenkomst alleen in"
 
 msgid "(omitted)"
 msgstr "(weggelaten)"
@@ -75,3 +75,9 @@ msgstr "(weggelaten)"
 #: Ergänzung CCE-Anbindung
 msgid "Add this records to the clippings cart"
 msgstr "Voeg deze records toe aan de stamboomknipsels"
+
+msgid "Date check performed on facts of type"
+msgstr "Datumcontrole uitgevoerd op feiten van het type"
+
+msgid "Name check performed only for table field 'n_type'"
+msgstr "Naamcontrole alleen uitgevoerd voor tabelveld 'n_type'"
